Fixed text overflow issue

--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,12 @@ label,
   font-size: 1.5em;
 }
 
+.card-p-text {
+  word-wrap: normal;
+  overflow: scroll;
+  max-height: 150px;
+}
+
 .card-body * {
   margin: 0px;
 }
